2007-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile.am: updates to pass distcheck target

2007-06-17  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/papers/piperesults.tex: updates for release

2007-06-16  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile: updates for release
	* doc/papers/Makefile.am: updates for release

	* configure.nexusware: remove any later language
	* src/util/init/specfs: remove any later language
	* src/util/strclean: remove any later language
	* src/util/strload.conf: remove any later language
	* src/util/strsetup: remove any later language
	* src/util/strsetup.conf: remove any later language

2007-06-13  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* debian/rules.in: added papers to release
	* doc/papers/Makefile: added papers to release
	* doc/papers/Makefile.am: added papers to release
	* streams.spec.in: added papers to release

2007-05-22  Brian Bidulock  <bidulock@openss7.org>

	* NEWS: updates for release
	* src/util/strace.c: initialize flags for getmsg
	* src/util/strerr.c: initialize flags for getmsg

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release

	* debian/streams-core.preinst.in: corrected array subscript syntax error
	* debian/streams-core.prerm.in: corrected array subscript syntax error
	* streams.spec.in: corrected array subscript syntax error

2007-05-18  Brian Bidulock  <bidulock@openss7.org>

	* src/kernel/strsched.c: ifdefs for debugging
	* doc/man/man9/dupb.9.man: documentation updates